# c-string

./: Cargo.toml  Makefile
src/: const_cstr.rs  error.rs  lib.rs  mut_cstr.rs  pattern.rs  string.rs  substr.rs
tests/: main.rs
