[package]
name = "cstring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["alloc"]
alloc = []
nightly = []
simd = ["nightly"]
alloc_api = ["nightly", "alloc"]

[dependencies]
cfg-if = "1.0.0"
docfg = "0.1.0"
memchr = "2.5.0"
static_assertions = "1.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
